<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lge.samplemanagement2.MainActivity" >

    <item
        android:id="@+id/export"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/one_export"/>

<item
        android:id="@+id/import_model"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/model_import"/>
    <item
        android:id="@+id/import_user"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/user_import"/>
    <item
        android:id="@+id/import_lend"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/lend_import"/>
    <item
        android:id="@+id/manage"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/user_manage"/>



</menu>
