<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:stretchColumns="1" >

    <TextView
        android:id="@+id/manage_textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/title_padding"
        android:text="@string/welcome1"
        android:textSize="@dimen/label_font_size" />
    <!-- 输入型号名的行 -->

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_id"
            android:textSize="@dimen/label_font_size" />

        <EditText
            android:id="@+id/ModelIDEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_sample"
            android:text=""
            android:textSize="15sp" />
            <ImageView
            android:id="@+id/Scan"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/image_top_margin"
            android:clickable="true"
            android:scaleType="centerInside"
            android:src="@drawable/scan" >
        </ImageView>
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model_name_manage"
            android:textSize="@dimen/label_font_size" />

        <EditText
            android:id="@+id/ModelEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </TableRow>
    <!-- 定义登录、取消按钮的行 -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bnCancel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/bnedit1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update" />
    </LinearLayout>

</TableLayout>