<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hongpenglong.areturn.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="80dp"
            android:layout_height="wrap_content" >
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/phone_id"
                android:id="@+id/textView" />
            <EditText
                android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
 />


        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="80dp"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/model_name"
                android:id="@+id/textView2"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="80dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:id="@+id/textView4" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow
            android:layout_width="80dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView5"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/lend_date"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow
            android:layout_width="80dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/return_date"
                android:id="@+id/textView6"
                android:autoText="true" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.82"/>
        </TableRow>
        </TableLayout>

<LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doscan"
                android:id="@+id/button"
                android:layout_weight="0.01"
                android:background="@color/action_bar"/>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ok"
                android:background="@color/action_bar"
                android:layout_weight="0.01" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/return_confirm"
            android:id="@+id/button3"
            android:layout_weight="0.03"
             android:background="@color/action_bar"
/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/othernote"
            android:id="@+id/textView10"
            android:layout_weight="0.03"
            android:textColor="@color/black" />

    </LinearLayout>

</RelativeLayout>