<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal" 
    android:background="@drawable/details_activity"
    android:gravity="right"
    >
    
    <LinearLayout 
        android:layout_width="0px"  
        android:layout_height="0px" 
        android:focusable="true"  
        android:focusableInTouchMode="true">
        
    </LinearLayout>  
    
    <AutoCompleteTextView
           android:id="@+id/auto1"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:hint="@string/model_name"
            android:completionThreshold="1"
            android:dropDownHeight="1000dp"
            
            
            />
            
       <AutoCompleteTextView
            android:id="@+id/auto2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/auto1"
            android:hint="@string/ad_id"
            />
            
       <Button
            android:id="@+id/search"
            android:layout_width="75dp"
            android:layout_height="37dp"
            android:layout_toRightOf="@+id/auto2"
            android:text="@string/search"
            android:textSize="15.0sp"
            />
       
</LinearLayout>
