<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lge.test.DymanticEditText">

    <LinearLayout
        android:id="@+id/LinerLayout01"  
        android:orientation="horizontal"  
    	android:layout_width="fill_parent"  
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="@dimen/sub_layout_magin_left">

        <TextView
            android:id="@+id/Phone_ID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_id" 
            android:layout_weight="2"></TextView>

        <TextView
            android:id="@+id/Model_Name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/model_name" 
            android:layout_weight="3"></TextView>        
	</LinearLayout> 

	<RelativeLayout
    	android:id="@+id/RelativeLayout02"
   		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_alignRight="@+id/LinerLayout01"
    	android:layout_alignEnd="@+id/LinerLayout01"
    	android:layout_below="@id/LinerLayout01"
    	android:layout_marginLeft="@dimen/sub_layout_magin_left"
    	android:layout_marginStart="@dimen/sub_layout_magin_left" >

		<LinearLayout
    		android:id="@+id/LinerLayout02"  
    		android:orientation="horizontal"  
    		android:layout_width="fill_parent"  
    		android:layout_height="wrap_content"
    		android:layout_marginRight="@dimen/linearlayout_right_margin"
    		android:layout_marginEnd="@dimen/linearlayout_end_margin">
        	<EditText
            	android:id="@+id/Phone_ID_Edit"
           	 	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"                    
            	android:layout_weight="1"></EditText>

        	<EditText
            	android:id="@+id/Model_Name_Edit"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content" 
           	 	android:inputType="none"           
            	android:layout_weight="2"></EditText>
		</LinearLayout> 
        <ImageView
            android:id="@+id/Scan"
            android:layout_width="wrap_content"
            android:layout_height="20dp" 
            android:layout_marginTop="@dimen/image_top_margin"       
            android:layout_alignParentRight="true"                 
            android:layout_alignParentEnd="true"                        
            android:src="@drawable/scan"           
            android:clickable="true"
            android:scaleType="centerInside"></ImageView>
	</RelativeLayout>         
	<LinearLayout
    	android:id="@+id/LinerLayout03"  
   	 	android:orientation="horizontal"  
    	android:layout_width="fill_parent"  
    	android:layout_height="wrap_content"
    	android:layout_marginRight="@dimen/linearlayout_right_margin"
    	android:layout_marginEnd="@dimen/linearlayout_end_margin"
    	android:layout_marginLeft="@dimen/sub_layout_magin_left"
    	android:layout_marginStart="@dimen/sub_layout_magin_left"
    	android:layout_below="@id/RelativeLayout02">
        <TextView
            android:id="@+id/Email_ID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"            
            android:layout_weight="2"
            android:layout_marginTop="@dimen/textview_top_margin"
            android:text="@string/ad_id"></TextView>

        <AutoCompleteTextView
            android:id="@+id/AD_ID_Edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="none"            
            android:layout_weight="1"></AutoCompleteTextView>       

	</LinearLayout> 
	<LinearLayout
    	android:id="@+id/LinerLayout04"  
    	android:orientation="horizontal"  
    	android:layout_width="fill_parent"  
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="@dimen/sub_layout_magin_left"
    	android:layout_marginStart="@dimen/sub_layout_magin_left"
    	android:layout_marginRight="@dimen/linearlayout_right_margin"
    	android:layout_marginEnd="@dimen/linearlayout_end_margin"
    	android:layout_below="@id/LinerLayout03">
        <TextView
            android:id="@+id/Name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"            
            android:layout_weight="2"
            android:layout_marginTop="@dimen/textview_top_margin"
            android:text="@string/user_name"></TextView>

        <EditText
            android:id="@+id/Peple_Name_Edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:inputType="none"            
            android:layout_weight="1"            
            android:hint="@string/people_name_change"></EditText>       

	</LinearLayout> 
	<LinearLayout
    	android:id="@+id/LinerLayoutLendDate"  
    	android:orientation="horizontal"  
    	android:layout_width="fill_parent"  
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="@dimen/sub_layout_magin_left"
    	android:layout_marginStart="@dimen/sub_layout_magin_left"
    	android:layout_marginRight="@dimen/linearlayout_right_margin"
    	android:layout_marginEnd="@dimen/linearlayout_end_margin"
    	android:layout_below="@id/LinerLayout04">        
    	<TextView
            android:id="@+id/Lend_Date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"            
            android:layout_weight="2"
            android:layout_marginTop="@dimen/textview_top_margin"
            android:text="@string/lend_date"></TextView>

        <EditText
            android:id="@+id/Lend_Date_Edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="date" 
            android:enabled="false"      
            android:layout_weight="1"></EditText>  

	</LinearLayout>
	<LinearLayout
    	android:id="@+id/LinerLayoutExpiredDate"  
    	android:orientation="horizontal"  
    	android:layout_width="fill_parent"  
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="@dimen/sub_layout_magin_left"
    	android:layout_marginStart="@dimen/sub_layout_magin_left"
    	android:layout_marginRight="@dimen/linearlayout_right_margin"
    	android:layout_marginEnd="@dimen/linearlayout_end_margin"
    	android:layout_below="@id/LinerLayoutLendDate">        
    	<TextView
            android:id="@+id/Return_Date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"            
            android:layout_weight="2"
            android:layout_marginTop="@dimen/textview_top_margin"
            android:text="@string/expired_date"></TextView>

        <EditText
            android:id="@+id/Return_Date_Edit"
            android:layout_width="fill_parent"
            android:inputType="date" 
            android:layout_height="wrap_content"                       
            android:layout_weight="1"></EditText>       

	</LinearLayout>      
    <TextView
            android:id="@+id/Memo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"   
            android:layout_marginLeft="@dimen/sub_layout_magin_left"
            android:layout_marginStart="@dimen/sub_layout_magin_left"
            android:layout_marginTop="@dimen/textview_top_margin"
            android:text="@string/memo"
            android:layout_below="@+id/LinerLayoutExpiredDate"> </TextView>
	 <EditText
	      android:id="@+id/MemoEdit"
	      android:layout_width="fill_parent"
	      android:layout_height="40dp"
	      android:layout_marginLeft="@dimen/sub_layout_magin_left"
          android:layout_marginStart="@dimen/sub_layout_magin_left"
          android:layout_marginTop="@dimen/textview_top_margin"
          android:layout_marginRight="@dimen/linearlayout_right_margin"
    	  android:layout_marginEnd="@dimen/linearlayout_end_margin"
    	  android:background="@drawable/color_edit_text"
	      android:layout_below="@+id/Memo"></EditText>
	 
    <TextView
            android:id="@+id/Sign_Info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"   
            android:layout_marginLeft="@dimen/sub_layout_magin_left"
            android:layout_marginStart="@dimen/sub_layout_magin_left"
            android:layout_marginTop="@dimen/textview_top_margin"
            android:text="@string/sign_info"
            android:layout_below="@+id/MemoEdit"> </TextView>
     <ImageView 
            android:id="@+id/Return_Sign"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="@dimen/sub_layout_magin_left"
            android:layout_marginStart="@dimen/sub_layout_magin_left"
            android:layout_marginTop="@dimen/textview_top_margin"
            android:layout_marginRight="@dimen/linearlayout_right_margin"
            android:layout_marginEnd="@dimen/linearlayout_end_margin"
            android:contentDescription="@string/imge_view_lend_user"            
            android:background="@drawable/imageview_bg_color"            
            android:layout_below="@+id/Sign_Info"></ImageView>
	<Button 
	    	android:id="@+id/Sign_Button"
	    	android:layout_width="@dimen/button_width"
	    	android:layout_height="@dimen/button_height"
	    	android:layout_below="@id/Return_Sign"
	    	android:layout_alignParentLeft="true"
	    	android:layout_alignParentStart="true"
	    	android:layout_marginLeft="@dimen/sub_layout_magin_left"
	    	android:layout_marginStart="@dimen/sub_layout_magin_left"
	    	android:layout_marginTop="@dimen/button_magin_top"
	    	android:text="@string/sign"
	    	android:textColor="#00f"
	    	android:textSize="@dimen/button_font_size"
	    	android:background="@android:color/holo_blue_light"></Button>
	  <Button 
	    	android:id="@+id/Save_Button"
	    	android:layout_width="@dimen/button_width"
	    	android:layout_height="@dimen/button_height"
	    	android:layout_below="@id/Return_Sign"
	    	android:layout_alignRight="@id/Return_Sign"
	    	android:layout_alignEnd="@id/Return_Sign"
	    	android:layout_marginTop="@dimen/button_magin_top"	    	
	    	android:textSize="@dimen/button_font_size"
	    	android:textColor="#00f"	    	
	    	android:background="@android:color/holo_blue_light"
	    	android:text="@string/lend_save"></Button>   
	
   
</RelativeLayout>
